chore: add CHANGELOG, update roadmap; add Prometheus exporter + metrics, multi-worker executor, retry/backoff tests; lock requirements

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,11 @@ model-cache/
 *.jpg
 *.png
 index.db
+metadata.sqlite
+app.db
+*.sqlite
+*.db
+derived/
+backend/derived/
+backend/derived/**
+*.npy
