dev(mac): fast smoke path\n- split core vs ML deps; INCLUDE_ML toggle\n- native arm64 build on mac; remove amd64 override\n- compose fixes and mac-friendly env\n- disable migrations/workers for smoke\n- docs: mac vs WSL2 flows, ops, security

--- a/deploy/env.sample
+++ b/deploy/env.sample
@@ -1,1 +1,25 @@
-NAS_PHOTOS_PATH=/mnt/nas/photos
+# Copy this file to `.env` in the deploy/ folder and adjust paths for your host.
+
+# macOS defaults (Docker Desktop -> Settings -> Resources -> File Sharing must include /Users)
+PHOTOS_PATH=/Users/$(whoami)/Projects/vlm-photo-engine/data/photos
+DERIVED_PATH=/Users/$(whoami)/Projects/vlm-photo-engine/data/derived
+
+# Windows/WSL2 example (uncomment if using WSL2)
+# PHOTOS_PATH=/mnt/e/photos
+# DERIVED_PATH=/mnt/d/vlm/derived
+
+# SQLite for simplicity (adjust to Postgres if needed)
+DATABASE_URL=sqlite:////data/app.sqlite
+
+# Optional worker tuning
+WORKER_CONCURRENCY=1
+ENABLE_INLINE_WORKER=true
+
+# GPU assignment (NVIDIA indices as seen by Docker). Split workloads:
+#   API on GPU 0 (Quadro P2000) for light/interactive tasks; VLM on GPU 1 (RTX 3090) for heavy inference.
+API_GPU=0
+VLM_GPU=1
+
+# Build toggle: include heavy ML dependencies (torch/faiss/etc.)
+# Set to true on WSL2/GPU host; keep false on mac dev for fast builds.
+INCLUDE_ML=false
