--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -1,1 +1,10 @@
-server { listen 80; location / { proxy_pass http://api:8000; } }
+server {
+	listen 80;
+	location / {
+		proxy_pass http://api:8000;
+	}
+	location /vlm/ {
+		proxy_set_header X-Forwarded-Prefix /vlm/;
+		proxy_pass http://vlm:7860/;
+	}
+}
