--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,2 +1,5 @@
 # Optional heavy ML dependencies are moved to requirements-ml.txt
 # Install them only when needed (e.g., GPU/WSL2 profile) to keep mac dev fast.
+
+# Default install: core dependencies
+-r requirements-core.txt
