--- a/deploy/env.sample
+++ b/deploy/env.sample
@@ -23,3 +23,11 @@ VLM_GPU=1
 # Build toggle: include heavy ML dependencies (torch/faiss/etc.)
 # Set to true on WSL2/GPU host; keep false on mac dev for fast builds.
 INCLUDE_ML=false
+
+# LVFace Configuration (for real face embeddings)
+# Uncomment and adjust paths if you have an external LVFace installation
+# FACE_EMBED_PROVIDER=lvface
+# LVFACE_PATH=/path/to/your/LVFace
+# LVFACE_EXTERNAL_DIR=/lvface
+# LVFACE_MODEL_NAME=LVFace-B_Glint360K.onnx
+# FACE_EMBED_DIM=512
