Update backend services for LVFace and caption integration
- Enhanced face detection and embedding services with LVFace provider support
- Updated person management router with improved clustering and search endpoints
- Extended schemas for face embedding providers and person management
- Enhanced task processing for face embedding and caption generation workflows
- Updated test configuration for LVFace integration testing
- Modified Docker compose for LVFace model deployment support

These changes complete the backend integration for both caption and LVFace systems.

--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -14,6 +14,8 @@ services:
       - ${DERIVED_PATH}:/derived:rw
       - api-data:/data:rw
       - pip-cache:/root/.cache/pip:rw
+      # Mount external LVFace directory if available
+      - ${LVFACE_PATH:-/dev/null}:/lvface:ro
     env_file:
       - ./env
     environment:
@@ -26,6 +28,11 @@ services:
       VECTOR_INDEX_AUTOLOAD: "false"
       EMBED_MODEL_IMAGE: stub
       EMBED_MODEL_TEXT: stub
+      # LVFace configuration
+      FACE_EMBED_PROVIDER: ${FACE_EMBED_PROVIDER:-stub}
+      LVFACE_EXTERNAL_DIR: ${LVFACE_EXTERNAL_DIR:-}
+      LVFACE_MODEL_NAME: ${LVFACE_MODEL_NAME:-lvface.onnx}
+      FACE_EMBED_DIM: ${FACE_EMBED_DIM:-128}
       NVIDIA_VISIBLE_DEVICES: ${API_GPU:-0}
     command: ["uvicorn","app.main:app","--host","0.0.0.0","--port","8000"]
     ports:
