caption: stabilize external subprocess integration (fallback to inference.py, UTF-8 decoding, remove --device); validation: check inference_backend.py; tooling: add Windows Terminal multiprocess dev launcher

--- a/deploy/env.sample
+++ b/deploy/env.sample
@@ -25,9 +25,24 @@ VLM_GPU=1
 INCLUDE_ML=false
 
 # LVFace Configuration (for real face embeddings)
+# If LVFACE_EXTERNAL_DIR is set, external mode is used and LVFACE_MODEL_PATH is ignored.
 # Uncomment and adjust paths if you have an external LVFace installation
 # FACE_EMBED_PROVIDER=lvface
 # LVFACE_PATH=/path/to/your/LVFace
 # LVFACE_EXTERNAL_DIR=/lvface
 # LVFACE_MODEL_NAME=LVFace-B_Glint360K.onnx
 # FACE_EMBED_DIM=512
+
+# Caption Models (BLIP2 / LLaVA / Qwen2.5-VL)
+# To run real captioning via an external folder (with its own .venv and inference.py):
+# CAPTION_PROVIDER=blip2
+# CAPTION_DEVICE=cpu
+# CAPTION_MODEL=auto
+# CAPTION_EXTERNAL_DIR=/captionmodel-blip
+
+# Video processing (disabled by default)
+# VIDEO_ENABLED=false
+# VIDEO_EXTENSIONS=.mp4,.mov,.mkv,.avi,.m4v
+# VIDEO_KEYFRAME_INTERVAL_SEC=2.0
+# VIDEO_SCENE_DETECT=false
+# VIDEO_SCENE_MIN_SEC=1.0
