voice: enable TTS end-to-end with Piper fallback; add browser ASR demo; docs: quick-start TTS/ASR verification and LLMyTranslate pointers

--- a/deploy/env.sample
+++ b/deploy/env.sample
@@ -46,3 +46,17 @@ INCLUDE_ML=false
 # VIDEO_KEYFRAME_INTERVAL_SEC=2.0
 # VIDEO_SCENE_DETECT=false
 # VIDEO_SCENE_MIN_SEC=1.0
+
+# Voice service (optional, proxied to external llmytranslate)
+# VOICE_ENABLED=false
+# VOICE_PROVIDER=external
+# VOICE_EXTERNAL_BASE_URL=http://localhost:8080
+# Paths aligned with llmytranslate defaults
+# VOICE_ASR_PATH=/api/voice-chat/transcribe
+# VOICE_TTS_PATH=/tts/synthesize
+# VOICE_CONVERSATION_PATH=/api/voice-chat/conversation
+# VOICE_HEALTH_PATH=/api/voice-chat/health
+# VOICE_CAPABILITIES_PATH=/api/voice-chat/capabilities
+# Optional API key header
+# VOICE_API_KEY=
+# VOICE_TIMEOUT_SEC=60
