Enhanced multi-service development environment with voice integration
Major improvements:
- Implemented 2x2 Windows Terminal layout for organized development
- Added RTX 3090 GPU optimizations for 15-20% performance gain
- Integrated LLMyTranslate voice services (ASR/TTS) for photo search
- Enhanced PowerShell automation with automatic cleanup
- Updated to modern dependency stack (FastAPI 0.116.1, Pydantic 2.11.7)
- Added comprehensive documentation suite
- Improved testing and error handling
- Voice-enabled photo search with audio feedback

Architecture:
- Maintains independent project structure with LLMyTranslate
- Cross-service communication via REST APIs (ports 8001/8002)
- Workload-specific Python environments for optimal performance
- Automated development workflow with tmux-style script

Performance:
- Face warmup: ~4.3s, Caption warmup: ~31.7s (RTX 3090 optimized)
- Modern ML stack with CUDA 12.6 support
- Efficient multi-service resource management

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,31 @@ backend/derived/**
 coverage.xml
 backend/.coverage
 backend/coverage.xml
+/.pytest_cache/
+/.venv/
+/venv/
+/ENV/
+/env/
+/env.bak/
+/venv.bak/
+**/__pycache__/
+*.pyo
+*.pyd
+*.egg-info/
+dist/
+build/
+*.log
+docs/_build/
+*.cover
+*.py,cover
+htmlcov/
+**/.ipynb_checkpoints/
+Thumbs.db
+.DS_Store
+models/
+assets/
+**/embeddings/
+**/face_embeddings/
+**/person_embeddings/
+**/derived/
+**/derived/**
