--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -10,6 +10,7 @@ ENV PYTHONDONTWRITEBYTECODE=1 \
 # System deps kept minimal to avoid triggering source builds
 RUN apt-get update && apt-get install -y --no-install-recommends \
     ca-certificates \
+    ffmpeg \
     && rm -rf /var/lib/apt/lists/*
 
 # Install Python deps first to leverage Docker layer cache
