feat: Sync requirements.txt with current environments
- Update backend/requirements-core.txt with modern versions (FastAPI 0.116.1, Pydantic 2.11.7)
- Update backend/requirements-ml.txt with PyTorch 2.6.0+cu124 and CUDA 12.4 support
- Add backend/requirements-lock-updated.txt with complete environment freeze
- Add comprehensive REQUIREMENTS_SYNC_REPORT.md documentation
- Ensure all packages match current .venv with RTX 3090 optimizations
- Ready for production deployment with exact version control

--- a/backend/requirements-core.txt
+++ b/backend/requirements-core.txt
@@ -1,15 +1,19 @@
-fastapi
-uvicorn[standard]
-sqlalchemy>=2.0.0
-pydantic
-Pillow
-ExifRead
-numpy
-alembic
-typer
+# Core dependencies - updated August 24, 2025
+# Modern versions matching current environment
+
+fastapi>=0.116.1
+uvicorn[standard]>=0.35.0
+sqlalchemy>=2.0.43
+pydantic>=2.11.7
+Pillow>=11.3.0
+ExifRead>=3.4.0
+numpy>=2.3.0
+alembic>=1.16.4
+typer>=0.16.0
 pytest
 pytest-cov
-imagehash
-prometheus-client
-python-multipart
-httpx
+imagehash>=4.3.2
+prometheus-client>=0.22.2
+python-multipart>=0.0.20
+httpx>=0.28.1
+psutil>=6.3.0
